[package]
name = "impossibletictactoe"
version = "0.1.0"
authors = ["gbaranski <gbaranski19@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/gbaranski/impossibletictactoe"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
