[package]
name = "impossibletictactoe"
version = "1.0.0"
authors = ["gbaranski <gbaranski19@gmail.com>"]
edition = "2018"
repository = "https://github.com/gbaranski/impossibletictactoe"
description = "Unbeatable Tic Tac Toe package with minimax algorithm"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
num-traits = "0.2"
num-derive = "0.2"
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"

